[project]
name = "topic-classication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grequests>=0.7.0",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "pydantic>2.0.0,<3.0.0",
    "pydantic-settings>2.0.0,<3.0.0",
    "requests>=2.32.3",
]
